feat: 实现消息广播与WebSocket实时推送、AI记忆加密留存、租户数据范围权限及动态菜单管理
1. 【消息广播与实时通知体系 (Notification & WebSocket)】
   - 新增消息广播实体与全量持久化（NotificationBroadcastEntity/Dao/Service/Controller）
   - 实现 WebSocket 实时通知推送通道（NotificationWebSocketServer / notify-ws.ts）与断线重连
   - 前端上线站内消息中心、消息广播管理以及顶部导航未读实时角标联动

2. 【AI 记忆留存与敏感信息加密 (Agent Memory Retention)】
   - 新增 MemoryCryptoService，支持记忆内容敏感字段国密/AES 加密与脱敏
   - 消息记忆支持保留周期（retention_days）与用户知情同意与反馈流转
   - 前端重构记忆管理中心（MemoryList.vue），完善检索与状态反馈

3. 【租户配额管控与数据范围权限 (Tenant Quota & Data Scope)】
   - 新增 TenantQuotaApi 与配额动态校验机制，支持存储、用户数与 AI Token 额度实时管控
   - 实现基于组织机构层级的数据范围隔离（TenantDataScopeApi / TenantDataScope）
   - 完善组织成员关联批量划归（OrgMemberAssignDTO / OrgTree.vue）与配额调整弹窗

4. 【动态菜单管理与 RBAC 权限矩阵 (Dynamic Menu & RBAC)】
   - 前端新增系统菜单管理与动态路由预览配置页面（/system/menu/）
   - 全面扩充全局细粒度权限码定义（permission.ts），覆盖通知广播、租户配额与AI算力调度
   - 优化权限分配组件（Permission.vue）与侧边栏高亮匹配规则

5. 【AI 算力与模型配置增强 (AI Model & Prompt Ops)】
   - 默认模型最大上下文 Tokens 限制扩展至 8192（V2_0_8）
   - 预置深度思考（Deep Thinking）系统提示词基准与流式中继容错优化
   - 对象存储服务补充预签名下载安全校验

6. 【数据库与系统脚本】
   - 新增 V2_0_3 至 V2_0_8 系列 Flyway 迁移脚本（广播表、权限扩展、记忆留存与模型参数）
   - 补齐租户角色基准数据（R__seed_tenant_roles.sql）及端到端集成测试用例